# numina-plugin-db

./: .gitignore  README.rst  pyproject.toml  setup.py  tox.ini
numinadb/: base.py  control.py  controldb.py  dal.py  helpers.py  ingest.py  jsonsqlite.py  model.py  polydict.py  proxydict.py  rundb.py
src/numinadb/: base.py  control.py  controldb.py  dal.py  dbkeys.py  event.py  ingest.py  model.py  polydict.py  proxydict.py  rundb.py
src/numinadb/cli/: methods.py  modealias.py  modedb.py  modeingest.py  moderun.py  rundb.py
src/numinadb/tests/: test_model.py
